# housing_price

./: .gitignore  Dockerfile  Makefile  README_WINDOWS.md  explain_code.txt  install.ps1  make.ps1  notes.txt  pyproject.toml  request.json  requirements.txt  serve.ps1  train.ps1
.github/workflows/: ci.yaml
configs/: serve.yaml  train.yaml
src/housing_model/: cli.py  config.py  data.py  evaluate.py  features.py  io.py  logging_setup.py  pipeline.py  predictor.py  profiling.py  registry.py  schema.py  service.py  train.py  versioning.py
tests/: test_pipeline_smoke.py  test_transforms.py
